Fix spacing on popular content section & add title

--- a/wp-content/themes/clarity/src/components/c-blog-feed/style.styl
+++ b/wp-content/themes/clarity/src/components/c-blog-feed/style.styl
@@ -17,7 +17,7 @@
 
   &.home {
     .c-blog-feature {
-      margin-top:$spacing*3;
+      margin-top:$spacing*2;
     }
   }
 
