--- a/wp-content/themes/clarity/src/components/c-events-widget/style.styl
+++ b/wp-content/themes/clarity/src/components/c-events-widget/style.styl
@@ -2,5 +2,5 @@
 @require "../../globals/css/_toolkit"
 
 .c-events-widget {
-  margin: $spacing*2 0;
+  margin: $spacing*3 0;
 }
