--- a/wp-content/themes/clarity/src/components/c-most-popular/style.styl
+++ b/wp-content/themes/clarity/src/components/c-most-popular/style.styl
@@ -26,7 +26,7 @@
 
   &.home {
     .c-most-popular {
-      margin-top:$spacing*3;
+      margin-top:$spacing*2;
     }
 
   }
