--- a/wp-content/themes/clarity/src/components/c-popular-content/style.styl
+++ b/wp-content/themes/clarity/src/components/c-popular-content/style.styl
@@ -4,4 +4,8 @@
 .c-popular-content {
   border-top: 3px solid $border;
   margin: $spacing 0;
+
+  .l-secondary {
+    margin-top:$spacing*2;
+  }
 }
